objects/zqu__StepToFilterMap__c.object
<CustomObject>
    <description>Map of a Guided Selling Step to a List Filter.</description>
    <fields>
        <fullName>zqu__GuidedSellingStep__c</fullName>
        <description>The Guided Selling Section being mapped to.</description>
        <inlineHelpText>The Guided Selling Section being mapped to.</inlineHelpText>
        <label>Guided Selling Step</label>
        <referenceTo>zqu__GuidedSellingStep__c</referenceTo>
        <relationshipName>PartToFilterMap</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__ListFilter__c</fullName>
        <description>The list filter being mapped to.</description>
        <inlineHelpText>The list filter being mapped to.</inlineHelpText>
        <label>List Filter</label>
        <referenceTo>zqu__List_Filter__c</referenceTo>
        <relationshipLabel>Step To Filter Maps</relationshipLabel>
        <relationshipName>StepToFilterMaps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__Order__c</fullName>
        <description>The order of the List Filter in the Guided Selling Step.</description>
        <inlineHelpText>The order of the List Filter in the Guided Selling Step.</inlineHelpText>
        <label>Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Step To Filter Map</label>
    <nameField>
        <label>Step To Filter Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Step To Filter Map</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>